--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="display-4">Juguemos al Ahorcado!</h1>
         <p class="lead">Busca a un amigo para jugar y completa los datos.</p>
         <hr class="my-4">
-        <form action="guardarPalabra.php" method="POST">
+        <form action="./guardarPalabra.php" method="POST">
             <div class="form-group">
                 <label for="palabra">Elige la palabra secreta</label>
                 <input type="text" name="palabra" class="form-control" id="palabra" aria-describedby="help">
